--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -30,6 +30,11 @@ dependencies {
 //    implementation 'com.google.auto.service:auto-service-annotations:1.0.1'
     implementation "com.google.devtools.ksp:symbol-processing-api:2.0.20-1.0.24"
 
+    implementation 'com.squareup:kotlinpoet:1.18.1'
+    implementation 'com.squareup:kotlinpoet-ksp:1.18.1'
+
+    implementation 'org.apache.commons:commons-text:1.12.0'
+
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
 }
 
