--- a/test/build.gradle
+++ b/test/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'application'
     id 'org.springframework.boot' version '3.2.4'
     id 'io.spring.dependency-management' version '1.1.4'
+    id 'com.google.devtools.ksp' version '2.0.20-1.0.24'
 }
 
 mainClassName = 'inc.kaizen.service.sprout.ApplicationKt'
@@ -9,6 +10,12 @@ mainClassName = 'inc.kaizen.service.sprout.ApplicationKt'
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    implementation("org.mapstruct.extensions.spring:mapstruct-spring-annotations:0.1.2")
+    implementation("org.mapstruct:mapstruct:1.5.3.Final")
+    ksp("org.mapstruct:mapstruct-processor:1.5.3.Final")
+
     implementation project(":lib")
     ksp project(":lib")
+//    kspTest project(":lib")
 }
