--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id 'com.google.devtools.ksp' version '2.0.20-1.0.24'
 }
 
-allprojects {
+subprojects {
     apply plugin: 'org.jetbrains.kotlin.jvm'
     apply plugin: 'com.google.devtools.ksp'
 
@@ -16,17 +16,17 @@ allprojects {
         mavenCentral()
     }
 
-    dependencies {
-        implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
-        implementation 'org.jetbrains.kotlin:kotlin-reflect'
-//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
-//    ksp 'com.google.auto.service:auto-service:1.0.1'
-//    implementation 'com.google.auto.service:auto-service-annotations:1.0.1'
-        implementation "com.google.devtools.ksp:symbol-processing-api:2.0.20-1.0.24"
-
-        testImplementation 'org.jetbrains.kotlin:kotlin-test'
-    }
+//    dependencies {
+//        implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+//        implementation 'org.jetbrains.kotlin:kotlin-reflect'
+////    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//
+////    ksp 'com.google.auto.service:auto-service:1.0.1'
+////    implementation 'com.google.auto.service:auto-service-annotations:1.0.1'
+//        implementation "com.google.devtools.ksp:symbol-processing-api:2.0.20-1.0.24"
+//
+//        testImplementation 'org.jetbrains.kotlin:kotlin-test'
+//    }
 
     test {
         useJUnitPlatform()
