run example application

--- a/test/build.gradle
+++ b/test/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id 'com.google.devtools.ksp' version '2.0.20-1.0.24'
 }
 
-mainClassName = 'inc.kaizen.service.sprout.ApplicationKt'
+mainClassName = 'inc.kaizen.service.education.ApplicationKt'
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -14,6 +14,10 @@ dependencies {
     implementation("org.mapstruct.extensions.spring:mapstruct-spring-annotations:0.1.2")
     implementation("org.mapstruct:mapstruct:1.5.3.Final")
     ksp("org.mapstruct:mapstruct-processor:1.5.3.Final")
+
+    implementation('org.postgresql:postgresql')
+
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0'
 
     implementation project(":lib")
     ksp project(":lib")
