--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '2.0.20'
+    id "org.jetbrains.kotlin.plugin.jpa" version "1.9.23"
     id "org.jetbrains.kotlin.plugin.noarg" version "1.9.23"
     id "org.jetbrains.kotlin.plugin.allopen" version "1.9.23"
 }
