--- a/test/src/main/resources/application.yml
+++ b/test/src/main/resources/application.yml
@@ -56,3 +56,9 @@ logging:
       springframework:
         web: TRACE
         security: TRACE
+#springdoc:
+#  api-docs:
+#    path: /api-docs
+#swagger-ui:
+#  path: /api-docs.html
+#  operationsSorter: method
