--- a/base/build.gradle
+++ b/base/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     implementation("org.mapstruct:mapstruct:1.5.3.Final")
 //    ksp("org.mapstruct:mapstruct-processor:1.5.3.Final")
 
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
+
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
